--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             const element = React.createElement("h1", {}, "Hello world with React");
             const root = ReactDOM.createRoot(document.getElementById('title'));
             root.render(element);
+            console.log("test")
         </script>
     </body>
 </html> 
